# -pytest-result-sender

./: .gitignore  msg.md  note.txt  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
