[project]
name = "pytest-result-sender"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pytest>=8.3.3",
    "requests>=2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir ="src"
[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log="pytest_result_sender.plugin"


# 脚手架配置
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
      \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
] }

test ="pytest"

